styles.css
body {
    margin: 0px;
    /*
    Challenge:
    Find a web safe font you like, and add it 
    to your card.
    */
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.avatar {
    width: 150px;
    border-radius: 3px;
    height: 180px;
}

.card {
    width: 400px;
    margin: 0 auto;
    padding: 20px;
    display: flex;
    justify-content: space-around;
    text-align: center;
    background: #16A29C;
    color: #2b2839;
    border-bottom: 6px solid #d8cefe;
        
    /*
    Challenge:
    Find a color palette you like on Coolors.co
    and use it in your business card.
     */
}
@media screen and (max-width: 600px) {
    .card {
        flex-direction: column;
        align-items: center;
        max-width: 100%;
        
    }
    
}
.border-blue {
    border: 1px dotted blue;
}
.co a{
    text-decoration: none;
}
/*
Stretch goals:
Find other ways you can personalize 
the design of your business card, e.g.:
- change the border(s)
- add border radius
- shuffle the layout
- shadows        🤯
- hover effects  🤯🤯
- animations     🤯🤯🤯
*/

